# openlist-bot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REFACTORING_SUMMARY.md  bot.py  config.example.yaml  docker-compose.yml.example  requirements.txt
.github/workflows/: docker-image.yml
api/: constants.py
api/openlist/: openlist_api.py
api/openlist/base/: base.py
api/openlist/base/admin/: meta.py  setting.py  user.py
api/openlist/base/fs/: get.py  put.py  search.py
api/openlist/base/storage/: get.py
api/pansou/: pansou_api.py
api/prowlarr/: prowlarr_api.py
api/tmdb/: tmdb_api.py
config/: config.py
module/: help.py  init.py
module/config_download/: config_download.py
module/file_refresh/: file_refresh.py
module/offline_download/: offline_download.py
module/search/: search.py
module/storage_browse/: storage_browse.py
module/tmdb_search/: tmdb_search.py
module/torrent_search/: torrent_search.py
src/: config.rs  main.rs  utils.rs
src/api/: mod.rs  openlist.rs  pansou.rs
src/handlers/: config_download.rs  download.rs  file_refresh.rs  help.rs  mod.rs  offline_download.rs  search.rs  storage_browse.rs  ui.rs
tools/: filters.py
tools/torrent_cache/: __init__.py
