[package]
name = "openlist-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
percent-encoding = "2.3"
async-trait = "0.1"
futures-util = "0.3"


